--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
 				<div class="row">
 					<div class="col-sm-12 col-lg-12">
 						<p><img src="img/logo.png" alt=""></p>
-						<p>Copyright @ 2013 sh_topsec All Rights Reserved 沪ICP备12026258号-12</p>
+						<p>Copyright @ 2017 226safe Team  All Rights Reserved</p>
 					</div>
 
 				</div>
