--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><img src="img/logo30.png" alt=""> <b>webug靶场</b></a>
+					<a class="navbar-brand" href="index.html"><img src="img/logo30.png" alt=""> <b>WebBug靶场</b></a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
